fix: Increase font size for body text to improve readability

--- a/public/style/typography.css
+++ b/public/style/typography.css
@@ -3,5 +3,6 @@
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
+    font-size: xx-large;
   }
   
